--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "waifujs",
+  "name": "robocaller",
+  "homepage": "https://prnth.com/robocaller",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chengsokdara/use-whisper": "^0.2.0",
+    "@ffmpeg/core": "^0.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.3.3"
   }
 }
